Import of BOOK/Net-Proxy-0.10 from CPAN.
gitpan-cpan-distribution: Net-Proxy
gitpan-cpan-version:      0.10
gitpan-cpan-path:         BOOK/Net-Proxy-0.10.tar.gz
gitpan-cpan-author:       BOOK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,11 +1,17 @@
 Revision history for Perl extension Net::Proxy
 
-0.09 Thu Sep 13 11:01:21 CEST 2007
-        [ENHANCEMENTS]
-        - the notice(), info() and debug() methods now have a timestamp
+0.10 Mon Oct  1 22:26:50 CEST 2007
         [DOCUMENTATION]
         - added information about the public SVN repository and the
           mailing-list
+        - added a tutorial about Net::Proxy, with code examples
+        [TESTS]
+        - prevent t/21connect.t, t/32tcp_connect.t, t/90compile.t to fail
+          when LWP::UserAgent is not installed
+
+0.09 Thu Sep 13 11:01:21 CEST 2007
+        [ENHANCEMENTS]
+        - the notice(), info() and debug() methods now have a timestamp
         [TESTS]
         - prevent the t/37connectssl_tcp.t test script to die when one
           of the prerequisites is missing (thus removing many FAILs)
